Fix white space influence in the dot-nav list

--- a/web/css/all.css
+++ b/web/css/all.css
@@ -147,10 +147,13 @@ figcaption a {
 }
 
 .dot-nav ul {
+  margin: 10px 0;
   padding: 0;
+  font-size: 0; /* hack for missing support for white-space-collapse:discard */
 }
 
 .dot-nav li {
+  font-size: 16px;
   display: inline-block;
   padding: 0 10px;
 }
